# whisper-transcribe

./: .env.example  .gitignore  ARCHITECTURE.md  INSTALL.md  README.md  pyproject.toml  requirements.txt  run_tests.py  set_api_key.sh  setup.py
speech_transcriber/: __init__.py  __main__.py  audio.py  audio_compression.py  clipboard.py  config.py  keyboard_listener.py  notification.py  sound.py  transcription.py  transcription_config.py  utils.py
tests/: __init__.py  test_audio.py  test_audio_compression.py  test_clipboard.py  test_keyboard_listener.py  test_main.py  test_notification.py  test_sound.py  test_transcription.py
