[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speech-transcriber"
version = "0.1.0"
description = "A speech-to-text transcription tool activated by keypress"
readme = "README.md"
requires-python = ">=3.8.1"
license = {text = "MIT"}
authors = [
  {name = "User", email = "user@example.com"}
]
dependencies = [
  "pynput>=1.7.6",
  "pyaudio>=0.2.13",
  "openai>=1.3.0",
  "pyperclip>=1.8.2",
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
  "google-generativeai>=0.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "black>=23.0.0",
  "isort>=5.12.0",
  "flake8>=6.0.0",
]

[project.scripts]
speech-transcriber = "speech_transcriber.__main__:main"

[tool.setuptools]
packages = ["speech_transcriber"] 